# vector

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
src/: test_main.c  vector.c  vector.h
test/: test_main.c
